css/app.css
@import url('https://fonts.googleapis.com/css?family=Open Sans:200i,400&display=swap');

html {
  /* Setting a base font size of 10px give us easier rem calculations
     Info: 1rem === 10px, 1.5rem === 15px, 2rem === 20px and so forth
   */
  font-size: 10px;
}

body {
  font-family: Open Sans, sans-serif;
  font-size: 1.6rem;
  line-height: 1.5;
  text-align: center;
  color: #333;
  margin: 0;
}

h1 {
  font-size: 4rem;
  margin-bottom: 0;
}

@media (max-width: 460px) {
  h1 {
    font-size: 3.5rem;
    line-height: 1.2;
  }
}

h2 {
  font-size: 2rem;
  margin-bottom: 50px
}

a {
  color: #477ca7;
}

a:visited {
  color: #74638f;
}

.main {
  margin: 30px 8px;
  padding: 15px;
  border-radius: 5px;
  background: #eee;
}

@media (max-width: 460px) {
  .main {
    margin: 0;
  }
}

img {
  max-width: 100%;
  display: block;
  height: auto;
  margin: 0 auto;
}

.img-div {
  background: white;
  padding: 10px;
  margin: 0;
}

.img-caption {
  margin: 15px 0px 5px 0;
}

.img-caption-2 {
  margin: 0px 0px 5px 0;
}

@media (max-width: 460px) {
  .img-caption {
    font-size: 1.4rem;
  }
}

.headline {
  margin: 50px 0 20px ;
  text-align: center;
}

blockquote {
  font-style: italic;
  max-width: 545px;
  margin: 50px auto 50px auto;
  text-align: left;
}

article {
  margin-bottom: 50px;
}
article > p {
  text-align: left;
}

